# event-scraper-github-actions

./: .env.example  .gitignore  CALENDAR_SYNC_PLAN.md  Dockerfile  GITHUB_ACTIONS_PLAN.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  WORKFLOW_CONFIG.md  agents.md  events.json  events_scored.json  generate_github_pages.sh  package.json  pyproject.toml  render.yaml  requirements.txt  spec.md  test_jules_integration.py  test_rausgegangen.json  tsconfig.json
.github/linters/: .eslintrc.yml
.github/workflows/: event-scraper-improvement.yml  improvement-cycle.yml  validation.yml  weekly-jules-review.yml  weekly-multi-source.yml  weekly-scraper.yml
.hermes/: component-map.json
app/: main.py
config/: categories.yaml
data/: events.json
docs/: events.json  events_scored.json
examples/: monitor-workflow.ts
scripts/: apply_jules_improvements.py  autonomous_repair.py  eventbrite_scraper.py  firecrawl_validation.py  generic_event_scraper.py  hermes-model-switch.py  jules_analysis.py  jules_client.py  jules_cloak_scraper.py  jules_event_scorer.py  jules_manual_review.py  jules_recover_failed.py  jules_scraper_generator.py  meetup_scraper.py  rausgegangen_scraper.py  score_events.py  scraper_improvement_cycle.py  update-model-context-length.py  weekly-event-scraper.py
src/: index.ts  workflow-status-monitor.integration.test.ts  workflow-status-monitor.test.ts  workflow-status-monitor.ts  workflow_log_downloader.py  workflow_monitor.py
src/github_auth/: cache.py  permissions.py  service.py
tests/: test_log_parser.py  test_repair_logic.py
web/: index.html
(+13 files in other folders)
