[project]
name = "event-scraper-github-actions"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "cloakbrowser>=0.4.8",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
